// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <a
      class="m-0 font-inherit font-inherit focus:outline-none hover:underline leading-[inherit] text-blue visited:text-purple no-underline"
    >
      Please verify your email
    </a>
  </div>
</div>
`;

exports[`Link when disabled renders disabled link 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <a
      aria-disabled="true"
      class="m-0 font-inherit font-inherit focus:outline-none hover:underline leading-[inherit] text-gray underline cursor-not"
      download="filename"
      rel="noopener"
    >
      Please verify your email
    </a>
  </div>
</div>
`;

exports[`Link when native attributes are provided renders native attributes 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <a
      class="m-0 font-inherit font-inherit focus:outline-none hover:underline leading-[inherit] text-blue visited:text-purple no-underline"
      download="filename"
      href="https://toptal.com/filename.txt"
      rel="noopener"
      target="_blank"
    >
      Please verify your email
    </a>
  </div>
</div>
`;

exports[`Link when using react-router Link renders a Link from react-router 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div>
      <a
        class="m-0 font-inherit font-inherit focus:outline-none hover:underline leading-[inherit] text-blue visited:text-purple no-underline"
        href="/"
      >
        Please verify your email
      </a>
    </div>
  </div>
</div>
`;
